webpack was added

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,11 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Phones</title>
-    <link rel="stylesheet" href="style/style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,100i,300"
       rel="stylesheet"
     />
-    <script src="js/main.js" defer type="module"></script>
+    <script src="./bundle.js" defer></script>
   </head>
   <body>
     <div class="table-component" data-component="table"></div>
